# nsa-eval

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.claude/skills/oss-init-nsa/: SKILL.md  runbook.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  mac_contributor.md
.github/workflows/: bench-dispatch.yml  bench-kaggle.yml  bench-mps.yml  ci.yml  leaderboard-update.yml  nightly-deps.yml  preprint-rebuild.yml  release.yml
configs/: config.yaml
configs/attention/: full.yaml  h2o.yaml  morphkv.yaml  nsa_cuda.yaml  nsa_mps.yaml  snapkv.yaml
configs/benchmark/: agentbench.yaml  longbench.yaml  niah.yaml  ruler.yaml
configs/device/: cpu.yaml  cuda.yaml  mps.yaml
configs/model/: llama32_1b.yaml  llama32_3b.yaml  qwen25_0_5b.yaml  qwen25_1_5b.yaml
experiments/_wip/: .gitkeep
notebooks/: _template_kaggle.ipynb  _template_mps.ipynb
papers/: tech_report_v0_1.md
papers/nsa_eval_v1/: .gitkeep
scripts/: finish-setup.sh  seed-issues.sh
src/nsa_eval/: __init__.py  cli.py
src/nsa_eval/attention/: __init__.py  baselines.py  morphkv_decode.py  mps_backend.py  nsa_wrapper.py  protocol.py
src/nsa_eval/config/: __init__.py  schema.py
src/nsa_eval/eval/: __init__.py  runner.py  spec.py
src/nsa_eval/eval/benchmarks/: __init__.py  agentbench.py  longbench.py  niah.py  ruler.py
src/nsa_eval/models/: __init__.py  hf_adapter.py  llama32.py  qwen25.py
src/nsa_eval/utils/: __init__.py  device_select.py  manifest.py  seed.py
tests/: conftest.py
tests/test_attention/: test_mps_numeric.py  test_protocol.py
tests/test_eval/: test_spec.py
